# tkrender

./: Cargo.toml  build.ps1  build.rs  install.ps1  main.py
mandelgen/: Cargo.toml  pyproject.toml
mandelgen/src/: lib.rs
old/: Cargo.toml
python/: dodec.py  donut.py  main.py  tkmandel.pyd  tkrender.pyd  tkrender.pyi  tktp.pyd
python/old/: dodec.py  donut.py  shaded.py  wireframe.py
src/: lib.rs  old.rs  older.rs
wheels/: tkrender-0.1.0-cp311-none-win_amd64.whl
