[package]
name = "tkrender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tkrender"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.31.4"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
rayon = "1.6.1"

[build-dependencies]
regex = "*"
